# orange_pi

./: README.md  init_rknn_test.py  mediapipe_eyes.py  video_shape_resize.py
models/rknn_models/yolov5s-seg/doc/: dataset.txt
multithreading/: config.json
multithreading/addons/webui/: server.py
multithreading/addons/webui/home/: client.js  home.html
multithreading/addons/webui/media/: custom_media.py
multithreading/addons/webui/settings/: settings.html
rknn_bench/: CMakeLists.txt  build-linux_RK3588.sh
rknn_bench/src/: main.cc
rknn_models/yolov8s-seg/doc/: dataset.txt
rknn_realtime_detect/: build-linux_RK3588.sh
rknn_realtime_detect/include/: loaddata.h  postprocess.h
rknn_realtime_detect/model/: labels.txt
rknn_realtime_detect/src/: main.cpp  postprocess.cc
train-yolo/yolov5s-seg/: train_yolov5s.ipynb
train-yolo/yolov8s-seg/: train_yolov8s.ipynb
train_yolo/yolov5s-seg/: train_yolov5s.ipynb
train_yolo/yolov8s-seg/: train_yolov8s.ipynb
